# Sail-On-API

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md  installation.rst
sail_on/: __init__.py  wsgi.py
sail_on/api/: __init__.py  constants.py  file_provider.py  file_provider_svo.py  provider.py  server.py
sail_on/api/evaluate/: activity_recognition.py  document_transcription.py  image_classification.py
scripts/: create_fe_tests.py  gen_test_id_file.py  get-avg-time.py  tests-status.py
tests/: test_api.py
tests/data/CONDDA/image_classification/: CONDDA.1.1.1234_metadata.json
tests/data/OND/activity_recognition/: OND.1.1.1234_metadata.json  OND.1.1.1234_single_df.csv  OND.1.1.1235_metadata.json  OND.1.1.1235_single_df.csv  test_ids.csv
tests/data/OND/image_classification/: OND.1.1.1234_metadata.json
tests/data/OND/nlt/: OND.1.1.1234_metadata.json  OND.1.1.1234_single_df.csv
tests/server_results_1597174927.7418814/: data_request.json  get_feedback.CONDDA.1.1.1234_characterization.csv  get_feedback.json
tests/session_state_files/: data_request.json  data_request_nlt.json  evaluation.json  evaluation_success.json  get_feedback.CONDDA.1.1.1234_detection.csv  get_feedback.json  get_feedback_budget.json  get_feedback_image.json  get_feedback_nlt_labels_success.OND.1.1.1234.json  get_feedback_nlt_labels_success.json  get_feedback_nlt_score_failure.OND.1.1.1234.json  get_feedback_transcripts.json  get_feedback_var.OND.1.1.1234.json  get_feedback_var.json  post_results.json  termination.json
tools/: run_img.sh
(+12 files in other folders)
