[tool.poetry]
name = "sail-on-api"
version = "0.0.2"
description = "Framework for deploying and evaluating novelty detection algorithms for DARPA Sail-On."
authors = ["PAR Government and Kitware, Inc."]
packages = [{ include = "tools" }, { include = "sail_on"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
